Рефакторинг консьюмеров Kafka